# Engineering_Man_Challenges

./: EMKC.cabal  README.MD
app/: Count_Freq.hs  Reverse_String.hs
