cabal-version:      2.4
name:               EMKC
version:            0.1.0.0


author:             firephil
maintainer:         

extra-source-files: README.md

executable EMKC
    main-is:          Count_Freq.hs

    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
